--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,12 @@ select{
 }
 
 .form-input{
+    display: none;
+}
 
+.price-sys{
+    background-color: rgb(207, 201, 201);
+    padding: 30px;
+    align-self: start;
 }
 
