Create the function for displaying the details

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,4 +23,12 @@ select{
     padding: 30px;
     align-self: start;
 }
+.tickets{
+    margin-top: 30px;
+    font-size: large;
+}
+.data{
+    cursor: pointer;
+    margin-top: 10px;
+}
 
