--- a/css/styles.css
+++ b/css/styles.css
@@ -31,4 +31,10 @@ select{
     cursor: pointer;
     margin-top: 10px;
 }
-
+.display{
+    display: none;
+    margin-left: 35px;
+    background-color: black;
+    color: white;
+    padding: 20px;
+}
